--- a/register.html
+++ b/register.html
@@ -7,25 +7,25 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputEmail4">Email</label>
-                <input id="email"type="email" class="form-control" id="inputEmail4">
+                <input  oninvalid="alert('You must fill out the form!');" id="email"type="email" class="form-control" id="inputEmail4"required>
               </div>
               <div class="form-group col-md-6">
                 <label for="inputPassword4">Password</label>
-                <input id="pass" type="password" class="form-control" id="inputPassword4">
+                <input id="pass" type="password" class="form-control" id="inputPassword4"required/>
               </div>
             </div>
             <div class="form-group">
               <label for="inputAddress">Address</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St"required>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity">
+                <input type="text" class="form-control" id="inputCity"required>
               </div>
               <div class="form-group col-md-4">
                 <label for="inputState">State</label>
-                <select id="inputState" class="form-control">
+                <select id="inputState" class="form-control"required>
                   <option selected>Choose...</option>
                   <option>Chattisgarh</option>
                   <option>Bihar</option>
@@ -39,7 +39,7 @@
               </div>
               <div class="form-group col-md-2">
                 <label for="inputZip">Zip</label>
-                <input type="text" class="form-control" id="inputZip">
+                <input type="text" class="form-control" id="inputZip"required>
               </div>
             </div>
             <div class="form-group">
@@ -50,11 +50,12 @@
                 </label>
               </div>
             </div>
-            <button id="sub"type="submit" class="btn btn-primary">Sign in</button>
+            <button  id="sub"type="submit" class="btn btn-primary">Sign in</button>
           </form>
-          <script type="text/javascript" src="index.js">
+          <script type="text/javascript" src="register.js">
 
           </script>
+          
     </body>
 </html>
 
