--- a/index1.html
+++ b/index1.html
@@ -148,7 +148,7 @@
                     <input id="mes" style="height:150px"type="text">
                     </label>
                     </br>
-                    <button onclick="display()" id ="sub">Button</button>
+                    <button onclick="display()" id ="sub">Submit</button>
                 </form>
                 
             </div>
